src/test/resources/purescript_examples/passing/ResolvableScopeConflict3.purs.psi
Purescript File
  PSProgramImpl(Program)
    PSModuleImpl(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PSProperNameImpl(ModuleName)
        PSProperNameImpl(Qualified)
          PsiElement(proper name)('Main')
        PsiElement(whitespace)(' ')
      PsiElement(()('(')
      PSPositionedDeclarationRefImpl(PositionedDeclarationRef)
        PSValueRefImpl(ValueRef)
          PSIdentifierImpl(identifier)
            PsiElement(identifier)('thing')
      PsiElement(,)(',')
      PsiElement(whitespace)(' ')
      PSPositionedDeclarationRefImpl(PositionedDeclarationRef)
        PSValueRefImpl(ValueRef)
          PSIdentifierImpl(identifier)
            PsiElement(identifier)('main')
      PsiElement(,)(',')
      PsiElement(whitespace)(' ')
      PSPositionedDeclarationRefImpl(PositionedDeclarationRef)
        PSProperNameImpl(ImportModuleName)
          PsiElement(module)('module')
          PsiElement(whitespace)(' ')
          PSProperNameImpl(Qualified)
            PsiElement(proper name)('A')
      PsiElement())(')')
      PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PSNamedBinderImpl(NamedBinder)
        <empty list>
      PSImportDeclarationImpl(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PSProperNameImpl(ImportModuleName)
          PSProperNameImpl(Qualified)
            PsiElement(proper name)('A')
          PsiElement(whitespace)('\n')
      PSNamedBinderImpl(NamedBinder)
        <empty list>
      PSImportDeclarationImpl(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PSProperNameImpl(ImportModuleName)
          PSProperNameImpl(Qualified)
            PSProperNameImpl(ProperName)
              PsiElement(proper name)('Control')
            PsiElement(.)('.')
            PSProperNameImpl(ProperName)
              PsiElement(proper name)('Monad')
            PsiElement(.)('.')
            PSProperNameImpl(ProperName)
              PsiElement(proper name)('Eff')
            PsiElement(.)('.')
            PsiElement(proper name)('Console')
          PsiElement(whitespace)(' ')
        PsiElement(()('(')
        PSPositionedDeclarationRefImpl(PositionedDeclarationRef)
          PSValueRefImpl(ValueRef)
            PSIdentifierImpl(identifier)
              PsiElement(identifier)('log')
        PsiElement())(')')
        PsiElement(whitespace)('\n\n')
      PSTypeDeclarationImpl(TypeDeclaration)
        PSTypeAnnotationNameImpl(TypeAnnotationName)
          PSIdentifierImpl(identifier)
            PsiElement(identifier)('thing')
            PsiElement(whitespace)(' ')
        PsiElement(::)('::')
        PsiElement(whitespace)(' ')
        PSTypeImpl(Type)
          PSTypeAtomImpl(TypeAtom)
            PSIdentifierImpl(TypeConstructor)
              PSProperNameImpl(Qualified)
                PSProperNameImpl(ProperName)
                  PsiElement(proper name)('Int')
                  PsiElement(whitespace)('\n')
      PSValueDeclarationImpl(ValueDeclaration)
        PSIdentifierImpl(identifier)
          PsiElement(identifier)('thing')
          PsiElement(whitespace)(' ')
        PSNamedBinderImpl(NamedBinder)
          <empty list>
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PSValueImpl(Value)
          PSPrefixValueImpl(PrefixValue)
            PSNumericLiteralImpl(NumericLiteral)
              PsiElement(natural)('2')
              PsiElement(whitespace)('\n\n')
      PSValueDeclarationImpl(ValueDeclaration)
        PSIdentifierImpl(identifier)
          PsiElement(identifier)('main')
          PsiElement(whitespace)(' ')
        PSNamedBinderImpl(NamedBinder)
          <empty list>
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PSValueImpl(Value)
          PSPrefixValueImpl(PrefixValue)
            PSVarImpl(Var)
              PSProperNameImpl(Qualified)
                PSIdentifierImpl(identifier)
                  PsiElement(identifier)('log')
                  PsiElement(whitespace)(' ')
            PSStringLiteralImpl(StringLiteral)
              PsiElement(string)('"Done"')
              PsiElement(whitespace)('\n')
